src/test/deca/context/invalid/ContextAvecObjet/New/newFloat.deca
// Description:
//    Déclaration d'une classe non définie
//
// Resultats:
//    Erreur contextuelle ligne 9
//    new déclare les classes uniquement

{
    float x = new float();
}